Tools/TestWebKitAPI/Tests/WebKit2Cocoa/Coding.mm
@@ -51,6 +51,7 @@ TEST(Coding, WKPreferences)
     [a setJavaScriptCanOpenWindowsAutomatically:NO];
     [a setJavaEnabled:YES];
     [a setPlugInsEnabled:YES];
+    [a setTabFocusesLinks:YES];
 #endif
 
     auto b = encodeAndDecode(a.get());
@@ -62,6 +63,7 @@ TEST(Coding, WKPreferences)
 #if PLATFORM(MAC)
     EXPECT_EQ([a javaEnabled], [b javaEnabled]);
     EXPECT_EQ([a plugInsEnabled], [b plugInsEnabled]);
+    EXPECT_EQ([a tabFocusesLinks], [b tabFocusesLinks]);
 #endif
 }
 
